<resources>
    <string name="app_name">Chats</string>
    <string name="log_out">log out</string>
    <string name="create_new_account">Create New Account</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="phone">phone</string>
    <string name="password">password</string>
    <string name="sign_up">sign up</string>
    <string name="do_you_not_have_any_account">Do you not have any Account ?</string>
    <string name="login">Login</string>
    <string name="write_a_message">write a message</string>
    <string name="send">send</string>
</resources>