<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".sign">
    <LinearLayout
        android:id="@+id/linearLayout_sign"
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:background="@drawable/linyar"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/imageprofilselect"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/user"
            android:layout_gravity="center"/>



        <EditText
            android:id="@+id/user_name_sign"
            android:layout_width="290dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/edittext"
            android:drawableLeft="@drawable/ic_baseline_account_circle_24"
            android:gravity="center"
            android:hint="@string/name"
            android:paddingLeft="10dp"
            android:paddingRight="40dp"
            android:textColor="@color/back"
            android:textColorHint="@color/back"
            android:textSize="22sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/user_email_sign"
            android:layout_width="290dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/edittext"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:gravity="center"
            android:hint="@string/email"
            android:paddingLeft="10dp"
            android:paddingRight="40dp"
            android:textColor="@color/back"
            android:textColorHint="@color/back"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password_sign"
            android:layout_width="290dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/edittext"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="40dp"
            android:textColor="@color/back"
            android:textColorHint="@color/back"
            android:textSize="22sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/phone_sign"
            android:layout_width="290dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/edittext"
            android:drawableLeft="@drawable/ic_baseline_local_phone_24"
            android:gravity="center"
            android:hint="@string/phone"
            android:inputType="number"
            android:paddingLeft="10dp"
            android:paddingRight="40dp"
            android:textColor="@color/back"
            android:textColorHint="@color/back"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/button"
            android:textColor="@color/back"
            android:text="@string/sign_up"
            android:textSize="18sp"
            android:textStyle="bold"/>




    </LinearLayout>

    <TextView
        android:id="@+id/textView3"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/create_new_account"
        android:textSize="30sp"
        android:textColor="@color/black"

        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout_sign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>