<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="580dp"
        android:background="@drawable/linyar"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Login"
            android:textSize="25sp"
            android:textColor="@color/back"
            android:layout_marginTop="30sp"
            android:textStyle="bold"/>



        <EditText
            android:id="@+id/user_email"
            android:layout_width="290dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:background="@drawable/edittext"
            android:drawableLeft="@drawable/ic_baseline_account_circle_24"
            android:gravity="center"
            android:hint="@string/email"
            android:paddingLeft="10dp"
            android:paddingRight="40dp"
            android:textColor="@color/back"
            android:textColorHint="@color/back"
            android:textSize="20sp"
            android:inputType="text"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password"
            android:layout_width="290dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/edittext"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="40dp"
            android:textColor="@color/back"
            android:textColorHint="@color/back"
            android:textSize="20sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:background="@drawable/button_them"
            android:backgroundTint="@color/back"
            android:text="@string/login"
            android:textSize="18sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="60dp"
                android:text="@string/do_you_not_have_any_account"
                android:textColor="@color/back1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="60dp"
                android:text="@string/sign_up"
                android:textColor="@color/back"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/user" />

    <LinearLayout
        android:layout_width="110dp"
        android:layout_height="151dp"
        android:background="@color/black"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ppp"
            android:orientation="vertical" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>